Crash when baking a certain object #45446

Closed
opened 2015-07-15 16:26:10 +02:00 by Greg Zaal · 9 comments
Member

System Information
Windows 7 64 bit (latest service packs)
gtx 570 (drivers are up to date)

Blender Version
Broken: recent master (4143b8a)

Short description of error
When attempting to bake AO of this object (in cycles), blender crashes.

There's nothing apparently special about this object to me, and I've had crashes with other objects too, but this is the only one that is consistently crashing.

Exact steps for others to reproduce the error
Blend file: bake_bug.blend

  • Open blend
  • Click bake
  • Crash might be instant, or might only happen when it finishes baking - but for me it will always crash.
**System Information** Windows 7 64 bit (latest service packs) gtx 570 (drivers are up to date) **Blender Version** Broken: recent master (4143b8a) **Short description of error** When attempting to bake AO of this object (in cycles), blender crashes. There's nothing apparently special about this object to me, and I've had crashes with other objects too, but this is the only one that is consistently crashing. **Exact steps for others to reproduce the error** Blend file: [bake_bug.blend](https://archive.blender.org/developer/F207256/bake_bug.blend) - Open blend - Click bake - Crash might be instant, or might only happen when it finishes baking - but for me it will always crash.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal
Author
Member

Added subscribers: @Sergey, @Psy-Fi

Added subscribers: @Sergey, @Psy-Fi

Added subscriber: @Harvester

Added subscriber: @Harvester

Hi Greg, I can confirm the same issue on my environment (Win7 Pro 64bit, 8GB RAM, CPU rendering only) with Blender 2.75a official release for Windows 64bit (ZIP). Only one time I was able to bake successfully AO without crashing Blender, after unwrapping again your model, but that was an exception because it continued to crash Blender as per your description. No special messages in the console.

Hi Greg, I can confirm the same issue on my environment (Win7 Pro 64bit, 8GB RAM, CPU rendering only) with Blender 2.75a official release for Windows 64bit (ZIP). Only one time I was able to bake successfully AO without crashing Blender, after unwrapping again your model, but that was an exception because it continued to crash Blender as per your description. No special messages in the console.
Member

Added subscriber: @VilemDuha

Added subscriber: @VilemDuha
Member

confirm crashing here too
win 8.1, 32 gb
geforce 880m, 8gb
EXCEPTION_ACCESS_VIOLATION

confirm crashing here too win 8.1, 32 gb geforce 880m, 8gb EXCEPTION_ACCESS_VIOLATION

This issue was referenced by 247d922ce5

This issue was referenced by 247d922ce5db05b74dc88947d4c816ffe6364d2c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45446
No description provided.